== CHANGELOG ==
08/03/17:
 - Added z-mesh generation to mesh_designer. Bulk changes to mesh (either in Z or XY) will result in the model being changed to a half-space if it wasn't already.
06/03/17:
 - Made mesh_designer callable as a script. Takes model and data file names as command line inputs.
 - Added 'sort_files' to utils, which goes through a given list of files and sorts them into a dictionary where the keys are file types (model, resp, data, lst)
02/03/17:
 - mesh_designer is more or less up and running. Changes to data_structures.Model to accomadate.
 - Fixed bug in compute_bost1D where comp was not being set if no argument was passed.
 - Changed bost1D script so that listfile is not needed.
 - Added a bit more to j2ws3d. Should be able to use it now, although still not tested.
 - Added most of the base functionality to mesh_designer. Can now save and revert progress, and write out model file.
 - Added GUI_common module that contains some of the common functions and classes used in the GUIs.
01/03/17:
 - Finished generate_lateral_mesh and generate_zmesh in utils.
 - IO.read_model now just assumes 1 dummy line at the top, and that the 2nd line contains NZ, NX, NZ
27/02/17:
 - Fixed bug in to_vtk.py script where Dataset was created even if no datafile or listfile were specified, which created an error.
 - read_model didn't flip the X (north-south) coordinates as they should. Changed that, and changed model_to_vtk accordingly.
24/02/17:
 - Changed the components list in data_plot to a table, with each type (e.g. impedance, tipper, phase, etc.) as headers.
 - Added bostick plotting to gplot and data_plot.
22/02/17:
 - Fixed bug where removing a site in data_plot.py would cause an error if only using a list file. Data.site_names was pointing directly to Raw.site_names rather than getting its own copy, and therefore the site would already be removed when RawData.remove_site was called.
22/02/17: