@@ -10,6 +10,7 @@ j2ws3d.py:
     - Make interactive period selection more interactive (pickable table for periods)
 
 data_plot.py:
+    - Ability to plot over the map with rho, phase, or model.
     - When adding / removing sites, the list should remember where you are. Gets annoying having to scroll back down and find your spot.
     - BIG BUG: I think that if you write a datafile after changing the sort order, something messes up with the written data files. Either the site locations are staying the same but the data is being moved, or vice versa, either way, the data is not right.
     - Should change the behavior of phase, rho, and bostick plotting to lazy calculation, but so that it retains that knowledge, i.e. calculate when called upon, but store the result so that it doesn't have to be calculated again.
