@@ -1,4 +1,6 @@
 == CHANGELOG ==
+28/03/17:
+ - Finished writing calculate_RMS for Dataset objects.
 08/03/17:
  - Added z-mesh generation to mesh_designer. Bulk changes to mesh (either in Z or XY) will result in the model being changed to a half-space if it wasn't already.
 06/03/17:
